# WebAI-to-API

./: .dockerignore  .env  .env.example  .gitignore  .python-version  AGENTS.md  ATLAS_PROVIDER_REVIEW.md  CLA.md  CLAUDE.md  COMMERCIAL_LICENSE.md  Changelog.md  Docker.md  Dockerfile  LICENSE  Makefile  README.MD  README.md  Readme_New.md  config.conf  config.conf.example  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  start-app-container.sh  start_claude.sh  update.sh  verify_login.py
.antigravitycli/: 2c320f44-2b7a-45cf-921c-94a619448b78.json
.claude/: observability-hardening-pr-a-deliverable.md  observability-hardening-pr-b-deliverable.md  observability-hardening-verification.md  observability-pr-b-verification.md
.gemini/commands/opsx/: apply.toml  explore.toml
.gemini/skills/create-github-pr/: SKILL.md
.github/workflows/: docker-build.yml
docs/: README.md  api-contract.md  api.md  architecture.md  browser-runtime-architecture.md  concurrency-model.md  configuration.md  dashboard.md  docker-deployment.md  docker.md  error-policy.md  lifecycle-and-recovery.md  provider-contract.md  runtime-architecture-overview.md  streaming-pipeline.md
docs/Issues/: Backlog-HotReload-Authentication-Docker.md  Shutdown-Signal.md  Technical-Debt-Startup.md
docs/specs/: api-contract.md  docker-deployment.md  lifecycle-and-recovery.md  provider-contract.md  runtime-architecture-overview.md  streaming-pipeline.md
examples/: client_dev.py  example_bard.py  example_chatgpt.py  example_chatgpt1.py  example_chatgpt2.py  example_claude.py  example_gemini.py  test.py
models/: deepseek.py  gemini.py
openspec/changes/docker-compatible-auth/: proposal.md  tasks.md
openspec/changes/on-demand-auth-bootstrap/: design.md  (+1 more)
scratch/: runtime_validation.py
scripts/: bootstrap.py  doctor.py  platform_utils.py
src/: Client_ChatGPT.py  Config conf  Config.conf  Config.conf.example  Example_bard.py  Example_chatgpt.py  Example_claude_test copy.py  Example_claude_test.py  Run-Server.sh  RunWebServer.sh  bard.py  claude.py  claude_api.py  client.py  client_2.py  client_chatgpt_web.py  config.conf.example  gemini.py  main.py  new.py  run.py  test.py  utility.py
src/UI/: package-lock.json  package.json
src/app/: __init__.py  config.py  env.py  logger.py  main.py
src/models/: gemini.py
src/schemas/: request.py
src/templates/: admin.html
tests/: conftest.py  test_api_endpoints.py  test_atlas_provider.py  test_auth_endpoints.py  test_auth_loader.py  test_bootstrap_doctor.py  test_browser_engine_lifecycle.py  test_browser_session.py  test_config_utils.py  test_conversation_concurrency.py  test_endpoints.py  test_factory.py  test_gemini_auth_selector.py  test_gemini_chat_concurrency.py  test_gemini_client.py  test_gemini_id_hardening.py  test_gemini_model_selection.py  test_gemini_multimodal_contract.py  test_gemini_playwright_parity.py  test_gemini_provider.py  test_gemini_provider_architecture.py  test_gemini_serialization.py  test_generation_invalidation.py  test_logging.py  test_main_utils.py  test_openapi_schema.py  test_orphan_cleanup.py  test_persistent_conversation_layer.py  test_persistent_tab_ownership.py  test_platform_detection.py  test_recovery_orchestration.py  test_runtime_paths.py  test_soft_cap.py  test_sqlite_repository.py  test_stale_busy_fix.py  test_streaming.py  test_system_endpoints.py  test_ui_dashboard.py  test_verify_login.py  test_version_alignment.py
tools/: audit_ui.py
webai2api/: Config.conf.example  __init__.py  run.py  setup.py  test.py
webai2api/.run/: WebAI Server.run.xml
webai2api/webai2api/: __main__.py  main.py
webaitoapi/: config.conf.example  main.py
webaitoapi/models/: claude.py  deepseek.py  gemini.py
(+185 files in other folders)
